--- a/package.json
+++ b/package.json
@@ -13,16 +13,24 @@
     "url": "git+https://github.com/Borisbell/movies-explorer-api.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Boris Belov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Borisbell/movies-explorer-api/issues"
   },
   "homepage": "https://github.com/Borisbell/movies-explorer-api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "celebrate": "^15.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-winston": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
