--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "winston": "^3.8.1"
   },
   "devDependencies": {
+    "@types/express-winston": "^4.0.0",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.19"
   }
 }
